--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,5 @@
 AUTH_SECRET="0XcFIyTHFZ7qf6VpOXb+jwcaBwPg/V0lI2z8BqxEja4=" # Added by `npx auth`. Read more: https://cli.authjs.dev
 AUTH_GITHUB_ID="Ov23liUGrOh4t6GKXvOt"
 AUTH_GITHUB_SECRET="276c854301e6ba612413e2f34f1eb39267374ab9"
+NEXT_PUBLIC_SANITY_PROJECT_ID="2t25ctxf"
+NEXT_PUBLIC_SANITY_DATASET="api-data"
